feat(mvp): implement service pivot administration
